--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    background-color: rgb(17, 17, 20);
 }
 
 
@@ -15,6 +16,7 @@
 }
 
 .post {
+    color: aliceblue;
     display: flex;
     padding: 15px;
     border: 2px solid teal;
