--- a/src/components/UI/MyModal/MyModal.module.css
+++ b/src/components/UI/MyModal/MyModal.module.css
@@ -1,3 +1,27 @@
 .myModal {
-    
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0px;
+    display: none;
+    /* background: rgba(0,0,0, 0.4  ); */
+    background: radial-gradient(35% 45%, rgba(0, 128, 128, 0.445), #11111484 );
+}
+
+.myModalContent{
+
+    padding: 25px;
+    background: #111114;
+    border-radius: 16px;
+    border: 2px solid teal;
+    /* border-color: aliceblue;
+    border-width: 10px; */
+    min-width: 250px;
+}
+
+.myModal.active {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
