--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -24,3 +24,23 @@
     justify-content: space-between;
     align-items: center;
 }
+
+
+.post-enter {
+    transform: translateX(-350px);
+    opacity: 0;
+}
+.post-enter-active {
+    opacity: 1;
+    transform: translateX(0px);
+    transition: all 500ms ease-in;
+}
+.post-exit {
+    opacity: 1;
+}
+.post-exit-active {
+    transform: translateX(-350px);
+    transition: all 500ms ease-in; 
+    opacity: 0;
+}
+  
