--- a/src/components/UI/MyModal/MyModal.module.css
+++ b/src/components/UI/MyModal/MyModal.module.css
@@ -7,10 +7,11 @@
     display: none;
     /* background: rgba(0,0,0, 0.4  ); */
     background: radial-gradient(35% 45%, rgba(0, 128, 128, 0.445), #11111484 );
+    transform: scale(0);
+    transition: 5s;
 }
 
 .myModalContent{
-
     padding: 25px;
     background: #111114;
     border-radius: 16px;
@@ -21,6 +22,7 @@
 }
 
 .myModal.active {
+    transform: scale(1);
     display: flex;
     justify-content: center;
     align-items: center;
