--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -43,4 +43,18 @@
     transition: all 500ms ease-in; 
     opacity: 0;
 }
-  
+.page__wrapper{
+    margin-top: 30px;
+    color: aliceblue;
+    display: flex;
+}
+
+.page{
+    padding: 10px;
+    border: 1px solid teal;
+    cursor: pointer;
+}
+.page__current{
+    border: 2px solid orange;
+    font-weight: bold;
+}
