--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -9,7 +9,8 @@
 
 #root {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 .App {
@@ -26,6 +27,9 @@
     align-items: center;
 }
 
+.post__btns{
+    display: flex;
+}
 
 .post-enter {
     transform: translateX(-350px);
@@ -58,4 +62,17 @@
 .page__current{
     border: 2px solid orange;
     font-weight: bold;
+}
+
+.navbar{
+    height: 50px;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    padding: 0 25px;
+    background: rgb(39, 39, 77);
+}
+
+.navbar__links{
+    margin-left: auto;
 }
