--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -25,10 +25,12 @@
     margin-top: 15px;
     justify-content: space-between;
     align-items: center;
+    border-radius: 10px;
 }
 
 .post__btns{
     display: flex;
+    
 }
 
 .post-enter {
