--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -67,14 +67,25 @@
 }
 
 .navbar{
-    height: 50px;
+    height: 60px;
     width: 100vw;
     display: flex;
     align-items: center;
     padding: 0 25px;
-    background: rgb(39, 39, 77);
+    background: rgb(15, 22, 41);
 }
 
 .navbar__links{
     margin-left: auto;
+    background:  rgb(15, 22, 41);
+    
+}
+.link{
+    /* margin-right: 15px; */
+    background: rgb(15, 22, 41);
+    width: 50px;
+    text-decoration: none;
+}
+.par{
+    /* background: rgb(15, 22, 41); */
 }
