--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -103,7 +103,13 @@ h1{
 #signin p > a:hover{
 	border-bottom: 1px solid;
 }
-
+.errorAuth{
+    color: brown;
+	padding: 0 20px;
+	font-weight: 700;
+	font-size: 12px;
+	margin: 5px 0 0 0;
+}
 
   /* -----------------waves ----------------- */
   .ocean {
